# ES_Sliced_Scroll

./: README.md  getSessionDataCSv.sh  getSessionDataSlicedScroll.py
addr_match/cpu/: SVM.ipynb  abuseip-do-150.sh  abuseip-do-300.sh  apt-extration.cpp  build.redhat.sh  data_plot.ipynb  do.sh  do2.sh  geo-city-display.sh  memo  multi_measure.cpp  multi_measure_2.sh  multi_measure_h-gpu08.sh  multi_measure_redhat.sh  multi_measure_us-cert.sh  search.sh  tmp3  unknown-tcp-anomaly-kmeans.ipynb
application/cpu/: apt-extration.cpp  multi_measure.cpp  multi_measure_2.sh  multi_measure_redhat.sh  reduction.sh  test.sh  unknown-tcp.sh  unknown-udp.sh
application/gpu/: discernGPU.cpp  (+3 more)
client/: CMakeLists.txt  search.cc
decision-tree/: 1.ipynb  dataread_SINET.ipynb  day.csv  decision-tree-classification-1.ipynb  decision-tree-sin-gen-noise.ipynb  decision-tree-sinet-day-2.ipynb  decision-tree-sinet-day.ipynb  week.csv
generator/: 10.cpp  11.cpp  12.cpp  2.cpp  4.cpp  6.cpp  7.cpp  8.cpp  9.cpp  README.md  aipr.cpp  build-0.sh  build.sh  gen.sh  header  header2  memo  sin1.py  sin2.cpp  trans.cpp  trans.sh
keras/: SDG.ipynb  makenoon-sugomori-mlp.ipynb  makenoons_plots.ipynb  sebastian-perceptron.ipynb
machine-learning/: sugomori-multiclass.ipynb
misc/: README.md  build.sh  do2.sh  kernel.cu  memo  readplot-single.py  readplot.py  reduce_by_key.cpp  reduce_by_key.cu  reduce_by_key_gpu.cpp  reduce_by_key_gpu.cu  sort_by_key.cu  stl.cpp  timer.h
plot/: README.md  plot.py
putSession/: memo  putSessionDataElastic.sh  putSessionDataElasticBulk.py  splitSessionData.py
(+77 files in other folders)
